# Roguelike-lol

./: LICENSE  README.md  copy_client.sh
client/: .editorConfig  .gitignore  bc_00000LVSQV3ARNLT_05.db
client/Assets/: Main.cs  config.txt
client/Assets/Model/: Entity.cs  Events.cs  InputControl.cs  MCamera.cs  Scene.cs  Wall.cs
client/Assets/Resources/: Bullet.prefab  Enemy.prefab  Floor.prefab  KaisaQBullet.prefab  KaisaWBullet.prefab  Line.prefab  UrgotBullet.prefab  Wall.prefab
client/Assets/Resources/Kaisa/: Animator Controller.controller  Prefab.prefab  attack1_-180.dae  attack1_-90.dae  attack1_180.dae  attack1_90.dae  idle.dae  run.dae  skill_r.dae  skill_w.dae
client/Assets/Resources/Materials/: Line.mat  Text Material.mat  UrgotBullet.mat
client/Assets/Resources/Melee/: Animator Controller.controller  Prefab.prefab  attack.dae  attack2.dae  attack3.dae  death.dae  idle.dae  run.dae
client/Assets/Resources/Nexus/: Animator Controller.controller  Prefab.prefab  idle.dae  nexus_tx_cm.dds
client/Assets/Resources/Urgot/: mat.dds  (+6 more)
client/Assets/Scenes/: MainScene.unity  SampleScene.unity
client/Assets/Tools/: Config.cs  IntSerialize.cs  Loader.cs  Remote.cs
client/Assets/View/: AttackRadius.cs  Chunk.cs  ChunkControl.cs  Env.cs  Skills.cs  VCamera.cs  VCanvas.cs  VKaisaWIndicator.cs  VWall.cs  View.cs  ViewObject.cs
client/ProjectSettings/: PackageManagerSettings.asset  ProjectSettings.asset  ProjectVersion.txt
server/: .gitignore  CMakeLists.txt  Doxyfile  Roguelike-Server.code-workspace  compile_proto.sh  main.cc  package.sh  run.sh  test.sh  todo.md
server/async/: AsyncClock.cc  AsyncClock.h  SocketConn.cc  SocketConn.h  SocketServer.cc  SocketServer.h
server/geo/: CMakeLists.txt  circle2d.cc  circle2d.h  geo.h  geo_float.h  line2d.cc  line2d.h  segment1d.cc  segment1d.h  segment2d.cc  segment2d.h  vec2.cc  vec2.h  vec3.cc  vec3.h
server/geo/test/: CMakeLists.txt  test_circle2d.cc  test_line2d.cc  test_segment1d.cc  test_segment2d.cc  test_tools.h  test_vec2.cc  test_vec3.cc
server/proto/: Message.proto  Scene.proto  Vector.proto
server/scene/: Config.cc  Config.h  EnemyAI.cc  EnemyAI.h  Entity.cc  Entity.h  Map.cc  Map.h  Scene.cc  Scene.h  Wall.cc  Wall.h
server/scene/action/: Action.cc  Action.h  Attack.cc  Attack.h  Custom.cc  Custom.h  Damage.cc  Damage.h  Destroy.cc  Destroy.h  KaisaQ.cc  KaisaQ.h  KaisaQBullet.cc  KaisaQBullet.h  KaisaR.cc  KaisaR.h  KaisaW.cc  KaisaW.h  KaisaWBullet.cc  KaisaWBullet.h  MeleeAttack.cc  MeleeAttack.h  Move.cc  Move.h  SatchelLaunch.cc  SatchelLaunch.h  UrgotAttack.cc  UrgotAttack.h  UrgotBullet.cc  UrgotBullet.h  Wait.cc  Wait.h  WaitAttack.cc  WaitAttack.h  comb.cc  comb.h
server/tools/: IntSerialize.h  UUID.cc  UUID.h  Vector.cc  Vector.h  basic.cc  basic.h  log.h
(+21 files in other folders)
